--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+    <title>To Isabela</title>
 </head>
 <body>
     <div class="greetings">
@@ -18,11 +18,11 @@
         <span>O</span>
     </div>
     <div class="description">
-        <span>Amo tu tatu!</span>
+        <span>Amo tu tatu!!</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Clica aqui</a>
+            <a href="flower.html">Clique aqui</a>
         </button>
         
     </div>
